Bug #1946 - WP Dashboard > formatting issues
Bringing back some elements of this for further testing:

1) Applying truncate on the fly to the respecive instances of group names and user names
2) Some refactoring of the adminbar layout and styling to give the user names a flexible space to occupy
3) Ensure that the admin bar is always made visiable, whether or not truncation is performed

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -404,7 +404,6 @@
                 }
             }
             #wp-admin-bar-my-account{
-		max-width: 220px;
                 .ab-sub-wrapper{
                     width: 150%;
                     min-width: 250px;
@@ -933,6 +932,23 @@
                 position: absolute;
                 right: 0;
                 z-index: -1;
+            }
+            .ab-top-menu{
+                float: left;
+            }
+            .ab-top-secondary{
+                float: right;
+            }
+            .ab-blogs-and-admin-centered{
+                float: none;
+                overflow: hidden;
+                text-align: right;
+                #wp-admin-bar-my-account{
+                    width: 100%;
+                }
+                @media (max-width: @screen-sm-max){
+                    text-align: center;
+                }
             }
             #wp-toolbar{
                 > ul{
